--- a/index.html
+++ b/index.html
@@ -9,28 +9,30 @@
 </head>
 
 <body>
-  <form>
-    <ul>
-      <li>
-        <input type='text' name='title' placeholder='Title' required />
-      </li>
-      <li>
-        <input type='text' name='author' placeholder='Author' required />
-      </li>
-      <li>
-        <input placeholder='Page count' type='number' name='pages' required />
-      </li>
-      <li>
-        <input type="checkbox" value="yes" name="read"/>
-      </li>
-    </ul>
-    <button type="submit" form="form" id="addBookBtn">Add</button>
-  </form>
-  <div className = "book-container">
-    <div>
-
-    </div>
+  <div id="newBookBtn">
+    <button id="newBookBtn">+ New Book</button>
   </div>
+  <div id="pop-up">
+    <form id="bookForm" action="/script.js">
+      <ul>
+        <li>
+          <input type='text' name='title' placeholder='Title' required />
+        </li>
+        <li>
+          <input type='text' name='author' placeholder='Author' required />
+        </li>
+        <li>
+          <input placeholder='Page count' type='number' name='pages' required />
+        </li>
+        <li>
+          <input type="checkbox" value="yes" name="read"/>
+        </li>
+      </ul>
+      <button type="submit" form="form" id="addBookBtn">Add</button>
+    </form>
+  </div>
+  <div className = "book-container"></div>
 
+  <script src="script.js"></script>
 </body>
 
