Updated background gradient and book form

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button id="newBookBtn">+ New Book</button>
   </div>
   <div id="pop-up">
+    <h2>New Book</h2>
     <form id="bookForm" action="/script.js">
       <ul>
         <li>
