--- a/index.html
+++ b/index.html
@@ -14,22 +14,12 @@
   </div>
   <div id="pop-up">
     <h2>New Book</h2>
-    <form id="bookForm" action="/script.js">
-      <ul>
-        <li>
-          <input type='text' name='title' placeholder='Title' required />
-        </li>
-        <li>
-          <input type='text' name='author' placeholder='Author' required />
-        </li>
-        <li>
-          <input placeholder='Page count' type='number' name='pages' required />
-        </li>
-        <li>
-          <input type="checkbox" value="yes" name="read"/>
-        </li>
-      </ul>
-      <button type="submit" form="form" id="addBookBtn">Add</button>
+    <form id="form">
+      <input type='text' name='title' placeholder='Title' required />
+      <input type='text' name='author' placeholder='Author' required />
+      <input placeholder='Page count' type='number' name='pages' required />
+      <label >Read: </label><input type="checkbox" value="yes" name="read"/>
+      <button type='submit' form='form' id='addBookBtn'>Add</button>
     </form>
   </div>
   <div className = "book-container"></div>
