Implemented add and remove book functions

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button type='button' id='addBtn'>Add</button>
     </form>
   </div>
-  <div className = "book-container"></div>
+  <div id="book-container"></div>
 
   <script src="script.js"></script>
 </body>
