Implemented read/unread toggle button function

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p><input type='text' id='pages' name='pages' placeholder='Pages'></p>
         </div>
         <div id='checkBox'>
-            <p><label >Read: </label><input type='checkbox' id='read' name='read' value='yes'></p>
+            <p><label >Read: </label><input type='checkbox' id='read' name='read' value='true'></p>
         </div>
         <button type='button' id='addBtn'>Add</button>
     </form>
